--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,10 @@
-forgeVersion=1.12.2-14.23.5.2847
-mcpVersion=stable_39
+forgeVersion=1.14.4-28.2.23
+mcpVersion=stable_58
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
+
+# Minecraft Version Information
+minecraft_version=1.14.4
+minecraft_version_toml=14
+
+forge_version_toml=28
